[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "flag-slurper"
version = "0.9.0"
description = "Tool for getting flags from CDC machines"
authors = ["Matt Gerst <mattgerst@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License"
]
include = [
    "LICENSE",
    "README.md",
    "docs/*",
    "tests/*.py",
    "flag_slurper/default.ini"
]

[tool.poetry.scripts]
flag-slurper = "flag_slurper.cli:cli"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
click = "^7.0"
pyyaml = "^5.1"
schema = "^0.7.1"
jinja2 = "^2.10"
peewee = "^3.11"
terminaltables = "^3.1"
dnspython = "^1.16"
Faker = "^2.0"
paramiko = {version = "^2.6", optional = true}
psycopg2-binary = {version = "^2.8", optional = true}
vistir = "^0.4.3"
shellingham = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
pytest-cov = "^2.7"
pytest-sugar = "^0.9.2"
pytest-mock = "^1.10"
tox = "^3.14"
vcrpy = "^2.1"
responses = "^0.10.6"
pretend = "^1.0"
hypothesis = "^4.36"
sphinx = {version = "^2.2", optional = true}
sphinx-autobuild = {version = "^0.7.1", optional = true}
sphinx_rtd_theme = {version = "^0.4.3", optional = true}
bumpversion = "^0.5.3"
twine = "^1.15"

[tool.poetry.extras]
remote = ["paramiko"]
parallel = ["psycopg2-binary"]
docs = ["sphinx", "sphinx-autobuild", "sphinx_rtd_theme"]
